css: made adaptive layout

--- a/index.html
+++ b/index.html
@@ -13,97 +13,77 @@
     <header class="page__header header">
         <div class="header__wrapper">
             <div class="header__avatar">
-                <img class="header__avatar-img">
+                <img class="header__avatar-img" src="https://via.placeholder.com/108x108" width="108" height="108"
+                    alt="Profile photogaph">
             </div>
             <div class="header__info">
                 <p class="header__name">Ivan Sukhoparov</p>
                 <p class="header__position">Junior Frontend Developer</p>
                 <p class="header__description"> Some words about me</p>
                 <a class="header__link">Resume</a>
+                <div class="header__contacts contacts">
+                    <a class="contacts__link contacts__link--place">
+                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
+                        <p class="contacts__text hidden"> Georgia, Batumi</p>
+                    </a>
+                    <a class="contacts__link contacts__link--email">
+                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
+                        <p class="contacts__text hidden">rbcdaaa@google.com</p>
+                    </a>
+                    <a class="contacts__link contacts__link--phone">
+                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
+                        <p class="contacts__text hidden">+995 558 550 487</p>
+                    </a>
+                    <a class="contacts__link contacts__link--whatsapp">
+                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
+                        <p class="contacts__text hidden">+7 911 791 75 24</p>
+                    </a>
+                    <a class="contacts__link contacts__link--telegram">
+                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
+                        <p class="contacts__text hidden">@Ivan_Su14688</p>
+                    </a>
+                    <a href="https://github.com/ivansukhoparov" class="contacts__link contacts__link--git">
+                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
+                        <p class="contacts__text hidden"></p>
+                    </a>
+                    <a href="https://www.linkedin.com/in/ivan-sukhoparov-041a1476/"
+                        class="contacts__link contacts__link--linkedin">
+                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
+                        <p class="contacts__text hidden">LinkedIn Profile</p>
+                    </a>
+                </div>
+
             </div>
-            <div class="header__contacts contacts">
-                <a class="contacts__link contacts__link--place">
-                    <span class="contacts__text hidden"> Georgia, Batumi</span>
-                </a>
-                <a class="contacts__link contacts__link--email">
-                    <span class="contacts__text hidden">rbcdaaa@google.com</span>
-                </a>
-                <a class="contacts__link contacts__link--phone">
-                    <span class="contacts__text hidden">+995 558 550 487</span>
-                </a>
-                <a class="contacts__link contacts__link--whatsapp">
-                    <span class="contacts__text hidden">+7 911 791 75 24</span>
-                </a>
-                <a class="contacts__link contacts__link--telegram">
-                    <span class="contacts__text hidden">@Ivan_Su14688</span>
-                </a>
-                <a href="https://github.com/ivansukhoparov" class="contacts__link contacts__link--git">
-                    <span class="contacts__text hidden"></span>
-                </a>
-                <a href="https://www.linkedin.com/in/ivan-sukhoparov-041a1476/"
-                    class="contacts__link contacts__link--linkedin">
-                    <span class="contacts__text hidden">LinkedIn Profile</span>
-                </a>
-            </div>
+
         </div>
     </header>
 
-    <main class="page__content portfolio">
+    <main class="page__content content">
+        <section class="portfolio">
+            <ul class="portfolio__list">
 
-        <ul class="portfolio__list">
-            <li class="portfolio__item ">
-                <img class="portfolio__thumbnail">
-                <a class="portfolio__link" href="#">Link to production</a>
-                <a class="portfolio__link" href="#">Link to github repository</a>
-                <p class="portfolio__title">ProjectName</p>
-                <p class="description">
-                    Some more description text, more more and more...
-                    Some more description text, more more and more...
-                    Some more description text, more more and more...
-                    Some more description text, more more and more...
-                    Some more description text, more more and more...
-                </p>
-            </li>
-            <li class="portfolio__item ">
-                <img class="portfolio__thumbnail">
-                <a class="portfolio__link" href="#">Link to production</a>
-                <a class="portfolio__link" href="#">Link to github repository</a>
-                <p class="portfolio__title">ProjectName</p>
-                <p class="description">
-                    Some more description text, more more and more...
-                    Some more description text, more more and more...
-                    Some more description text, more more and more...
-                    Some more description text, more more and more...
-                    Some more description text, more more and more...
-                </p>
-            </li>
-            <li class="portfolio__item ">
-                <img class="portfolio__thumbnail">
-                <a class="portfolio__link" href="#">Link to production</a>
-                <a class="portfolio__link" href="#">Link to github repository</a>
-                <p class="portfolio__title">ProjectName</p>
-                <p class="description">
-                    Some more description text, more more and more...
-                    Some more description text, more more and more...
-                    Some more description text, more more and more...
-                    Some more description text, more more and more...
-                    Some more description text, more more and more...
-                </p>
-            </li>
-            <li class="portfolio__item ">
-                <img class="portfolio__thumbnail">
-                <a class="portfolio__link" href="#">Link to production</a>
-                <a class="portfolio__link" href="#">Link to github repository</a>
-                <p class="portfolio__title">ProjectName</p>
-                <p class="description">
-                    Some more description text, more more and more...
-                    Some more description text, more more and more...
-                    Some more description text, more more and more...
-                    Some more description text, more more and more...
-                    Some more description text, more more and more...
-                </p>
-            </li>
-        </ul>
+                <li class="portfolio__item ">
+                    <img class="portfolio__thumbnail" src="https://via.placeholder.com/400x250" width="400"
+                        height="250">
+                    <p class="portfolio__title">Nerds</p>
+                    <div class="portfolio__wrapper">
+                        <a class="portfolio__link" href="#">View</a>
+                        <a class="portfolio__link" href="#">Repository</a>
+                    </div>
+                </li>
+                <li class="portfolio__item ">
+                    <img class="portfolio__thumbnail" src="https://via.placeholder.com/400x250" width="400"
+                        height="250">
+                    <p class="portfolio__title">Web Developer Portfolio</p>
+                    <div class="portfolio__wrapper">
+                        <a class="portfolio__link" href="#">View</a>
+                        <a class="portfolio__link" href="#">Repository</a>
+                    </div>
+                </li>
+
+            </ul>
+        </section>
+
     </main>
 
     <footer class="page__footer footer">
@@ -112,15 +92,73 @@
             <p class="footer__position">Junior Frontend Developer</p>
         </div>
         <div class="footer__contacts contacts">
-            <a class="contacts__link contacts__link--place">Georgia, Batumi</a>
-            <a class="contacts__link contacts__link--email">rbcdaaa@google.com</a>
-            <a class="contacts__link contacts__link--phone">+995 558 550 487</a>
-            <a class="contacts__link contacts__link--whatsapp">+7 911 791 75 24</a>
-            <a class="contacts__link contacts__link--telegram">@Ivan_Su14688</a>
-            <a class="contacts__link contacts__link--git">https://github.com/ivansukhoparov</a>
-            <a class="contacts__link contacts__link--linkedin">
-                https://www.linkedin.com/in/ivan-sukhoparov-041a1476/
-            </a>
+            <ul class="contacts__list">
+                <li class="contacts__item ">
+                    <a class="contacts__link contacts__link--footer contacts__link--place">
+                        <p class="contacts__text"> Georgia, Batumi</p>
+                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
+
+                    </a>
+                </li>
+                <li class="contacts__item">
+                    <a class="contacts__link contacts__link--footer contacts__link--email">
+                        <p class="contacts__text">rbcdaaa@google.com</p>
+                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
+
+                    </a>
+                </li>
+                <li class="contacts__item">
+                    <a class="contacts__link contacts__link--footer contacts__link--phone">
+                        <p class="contacts__text">+995 558 550 487</p>
+                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
+
+                    </a>
+                </li>
+                <li class="contacts__item">
+                    <a class="contacts__link contacts__link--footer contacts__link--phone">
+                        <p class="contacts__text">+995 558 550 487</p>
+                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
+
+                    </a>
+                </li>
+                <li class="contacts__item">
+                    <a class="contacts__link contacts__link--footer contacts__link--whatsapp">
+                        <p class="contacts__text">+7 911 791 75 24</p>
+                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
+
+                    </a>
+                </li>
+                <li class="contacts__item">
+                    <a class="contacts__link contacts__link--footer contacts__link--telegram">
+                        <p class="contacts__text">@Ivan_Su14688</p>
+                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
+
+                    </a>
+                </li>
+                <li class="contacts__item">
+                    <a href="https://github.com/ivansukhoparov"
+                        class="contacts__link contacts__link--footer contacts__link--git">
+                        <p class="contacts__text"></p>
+                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
+
+                    </a>
+                </li>
+                <li class="contacts__item">
+                    <a href="https://www.linkedin.com/in/ivan-sukhoparov-041a1476/"
+                        class="contacts__link contacts__link--footer contacts__link--linkedin">
+                        <p class="contacts__text">LinkedIn Profile</p>
+                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
+
+                    </a>
+                </li>
+
+            </ul>
+
+
+
+
+
+
         </div>
     </footer>
 
