content: added images and added href to links

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="page__header header">
         <div class="header__wrapper">
             <div class="header__avatar">
-                <img class="header__avatar-img" src="https://via.placeholder.com/108x108" width="108" height="108"
+                <img class="header__avatar-img" src="source/img/avatar-108.jpg" width="108" height="108"
                     alt="Profile photogaph">
             </div>
             <div class="header__info">
@@ -22,33 +22,33 @@
                 <p class="header__description"> Some words about me</p>
                 <a class="header__link">Resume</a>
                 <div class="header__contacts contacts">
-                    <a class="contacts__link contacts__link--place">
-                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
+                    <a href="https://goo.gl/maps/XXBjU4BSbaSxKEi2A" class="contacts__link contacts__link--place">
+                        <img class="contacts__icon" src="source/img/icons/location-pin.svg" width="32" height="32">
                         <p class="contacts__text hidden"> Georgia, Batumi</p>
                     </a>
-                    <a class="contacts__link contacts__link--email">
-                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
+                    <a href="mailto:rbcdaaa@gmail.com" class="contacts__link contacts__link--email">
+                        <img class="contacts__icon" src="source/img/icons/envelope-closed.svg" width="32" height="32">
                         <p class="contacts__text hidden">rbcdaaa@google.com</p>
                     </a>
-                    <a class="contacts__link contacts__link--phone">
-                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
+                    <a href="tel:+995558550487" class="contacts__link contacts__link--phone">
+                        <img class="contacts__icon" src="source/img/icons/phone.svg" width="32" height="32">
                         <p class="contacts__text hidden">+995 558 550 487</p>
                     </a>
-                    <a class="contacts__link contacts__link--whatsapp">
-                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
-                        <p class="contacts__text hidden">+7 911 791 75 24</p>
+                    <a href="https://wa.me/995558550487" class="contacts__link contacts__link--whatsapp">
+                        <img class="contacts__icon" src="source/img/icons/whatsapp.svg" width="32" height="32">
+                        <p class="contacts__text hidden">+995 558 550 487</p>
                     </a>
-                    <a class="contacts__link contacts__link--telegram">
-                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
+                    <a href="https://t.me/ivan_Su14688" class="contacts__link contacts__link--telegram">
+                        <img class="contacts__icon" src="source/img/icons/telegram.svg" width="32" height="32">
                         <p class="contacts__text hidden">@Ivan_Su14688</p>
                     </a>
                     <a href="https://github.com/ivansukhoparov" class="contacts__link contacts__link--git">
-                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
-                        <p class="contacts__text hidden"></p>
+                        <img class="contacts__icon" src="source/img/icons/github.svg" width="32" height="32">
+                        <p class="contacts__text hidden">GitHub</p>
                     </a>
                     <a href="https://www.linkedin.com/in/ivan-sukhoparov-041a1476/"
                         class="contacts__link contacts__link--linkedin">
-                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
+                        <img class="contacts__icon" src="source/img/icons/linkedin.svg" width="32" height="32">
                         <p class="contacts__text hidden">LinkedIn Profile</p>
                     </a>
                 </div>
@@ -63,8 +63,7 @@
             <ul class="portfolio__list">
 
                 <li class="portfolio__item ">
-                    <img class="portfolio__thumbnail" src="https://via.placeholder.com/400x250" width="400"
-                        height="250">
+                    <img class="portfolio__thumbnail" src="source/img/portfolio/nerds-380.jpg" width="400" height="250">
                     <p class="portfolio__title">Nerds</p>
                     <div class="portfolio__wrapper">
                         <a class="portfolio__link" href="#">View</a>
@@ -94,52 +93,49 @@
         <div class="footer__contacts contacts">
             <ul class="contacts__list">
                 <li class="contacts__item ">
-                    <a class="contacts__link contacts__link--footer contacts__link--place">
+                    <a href="https://goo.gl/maps/XXBjU4BSbaSxKEi2A"
+                        class="contacts__link contacts__link--footer contacts__link--place">
                         <p class="contacts__text"> Georgia, Batumi</p>
-                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
+                        <img class="contacts__icon" src="source/img/icons/location-pin.svg" width="32" height="32">
 
                     </a>
                 </li>
                 <li class="contacts__item">
-                    <a class="contacts__link contacts__link--footer contacts__link--email">
+                    <a href="mailto:rbcdaaa@gmail.com"
+                        class="contacts__link contacts__link--footer contacts__link--email">
                         <p class="contacts__text">rbcdaaa@google.com</p>
-                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
+                        <img class="contacts__icon" src="source/img/icons/envelope-closed.svg" width="32" height="32">
 
                     </a>
                 </li>
                 <li class="contacts__item">
-                    <a class="contacts__link contacts__link--footer contacts__link--phone">
+                    <a href="tel:+995558550487" class="contacts__link contacts__link--footer contacts__link--phone">
                         <p class="contacts__text">+995 558 550 487</p>
-                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
+                        <img class="contacts__icon" src="source/img/icons/phone.svg" width="32" height="32">
 
                     </a>
                 </li>
                 <li class="contacts__item">
-                    <a class="contacts__link contacts__link--footer contacts__link--phone">
-                        <p class="contacts__text">+995 558 550 487</p>
-                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
-
-                    </a>
-                </li>
-                <li class="contacts__item">
-                    <a class="contacts__link contacts__link--footer contacts__link--whatsapp">
+                    <a href="https://wa.me/995558550487"
+                        class="contacts__link contacts__link--footer contacts__link--whatsapp">
                         <p class="contacts__text">+7 911 791 75 24</p>
-                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
+                        <img class="contacts__icon" src="source/img/icons/whatsapp.svg" width="32" height="32">
 
                     </a>
                 </li>
                 <li class="contacts__item">
-                    <a class="contacts__link contacts__link--footer contacts__link--telegram">
+                    <a href="https://t.me/ivan_Su14688"
+                        class="contacts__link contacts__link--footer contacts__link--telegram">
                         <p class="contacts__text">@Ivan_Su14688</p>
-                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
+                        <img class="contacts__icon" src="source/img/icons/telegram.svg" width="32" height="32">
 
                     </a>
                 </li>
                 <li class="contacts__item">
                     <a href="https://github.com/ivansukhoparov"
                         class="contacts__link contacts__link--footer contacts__link--git">
-                        <p class="contacts__text"></p>
-                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
+                        <p class="contacts__text">GitHub</p>
+                        <img class="contacts__icon" src="source/img/icons/github.svg" width="32" height="32">
 
                     </a>
                 </li>
@@ -147,7 +143,7 @@
                     <a href="https://www.linkedin.com/in/ivan-sukhoparov-041a1476/"
                         class="contacts__link contacts__link--footer contacts__link--linkedin">
                         <p class="contacts__text">LinkedIn Profile</p>
-                        <img class="contacts__icon" src="https://via.placeholder.com/32x32" width="32" height="32">
+                        <img class="contacts__icon" src="source/img/icons/linkedin.svg" width="32" height="32">
 
                     </a>
                 </li>
