content: added portfolio items - nerds and this

--- a/index.html
+++ b/index.html
@@ -63,20 +63,21 @@
             <ul class="portfolio__list">
 
                 <li class="portfolio__item ">
-                    <img class="portfolio__thumbnail" src="source/img/portfolio/nerds-380.jpg" width="400" height="250">
+                    <img class="portfolio__thumbnail" src="source/img/portfolio/nerds-380.jpg" width="380" height="235">
                     <p class="portfolio__title">Nerds</p>
                     <div class="portfolio__wrapper">
-                        <a class="portfolio__link" href="#">View</a>
-                        <a class="portfolio__link" href="#">Repository</a>
+                        <a class="portfolio__link" href="source/content/01nerds/index.html">View</a>
+                        <a class="portfolio__link" href="https://github.com/ivansukhoparov/017-01-nerds">View code</a>
                     </div>
                 </li>
+
                 <li class="portfolio__item ">
-                    <img class="portfolio__thumbnail" src="https://via.placeholder.com/400x250" width="400"
-                        height="250">
+                    <img class="portfolio__thumbnail" src="source/img/portfolio/fdwp-380.jpg" width="380" height="235">
                     <p class="portfolio__title">Web Developer Portfolio</p>
                     <div class="portfolio__wrapper">
                         <a class="portfolio__link" href="#">View</a>
-                        <a class="portfolio__link" href="#">Repository</a>
+                        <a class="portfolio__link"
+                            href="https://github.com/ivansukhoparov/ivansukhoparov.github.io">View code</a>
                     </div>
                 </li>
 
